# pixils

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
lib/pixils/: CMakeLists.txt
lib/pixils/cmake/: pixilsConfig.cmake
lib/pixils/include/pixils/: arg_collector.h  client.h  color.h  console.h  context.h  display.h  font_registry.h  frame_events.h  geom.h  hook_context.h  init_sdl.h  keyboard.h  num.h  pixils_namespace.h  pretty_printer.h  program.h  script.h  text.h  timer.h
lib/pixils/include/pixils/asset/: bundle.h  embedded_assets.h  loader.h  registry.h
lib/pixils/include/pixils/binding/: arg_collector.h  audio_namespace.h  color_namespace.h  image_namespace.h  mode_definition.h  pixils_namespace.h  point_namespace.h  rect_namespace.h  render_namespace.h  resource_namespace.h  state_counter_namespace.h  style_namespace.h  ui_namespace.h
lib/pixils/include/pixils/runtime/: event_routing.h  hook_arguments.h  hook_invocation.h  mode.h  mode_stack.h  render.h  session.h  state.h  view.h
lib/pixils/include/pixils/state/: counter.h
lib/pixils/include/pixils/ui/: event.h  interaction.h  interaction_dispatch.h  line.h  mouse_button.h  mouse_state.h  style.h  view_events.h  view_layout.h  view_lifecycle.h  view_render.h  view_update.h
lib/pixils/src/: arg_collector.cpp  client.cpp  color.cpp  console.cpp  context.cpp  display.cpp  font_registry.cpp  frame_events.cpp  geom.cpp  init_sdl.cpp  keyboard.cpp  num.cpp  pixils_namespace.cpp  pretty_printer.cpp  program.cpp  script.cpp  text.cpp  timer.cpp
lib/pixils/src/asset/: consolefont_png.cpp  loader.cpp  pixils_logo_png.cpp  registry.cpp
lib/pixils/src/binding/: arg_collector.cpp  audio_namespace.cpp  color_namespace.cpp  image_namespace.cpp  mode_definition.cpp  pixils_namespace.cpp  point_namespace.cpp  rect_namespace.cpp  render_namespace.cpp  resource_namespace.cpp  state_counter_namespace.cpp  style_namespace.cpp  ui_namespace.cpp
lib/pixils/src/modules/tilemap/: tilemap.h
lib/pixils/src/runtime/: event_routing.cpp  hook_arguments.cpp  hook_invocation.cpp  mode_stack.cpp  render.cpp  session.cpp  state.cpp  update.cpp  view.cpp
lib/pixils/src/state/: counter.cpp
lib/pixils/src/ui/: event.cpp  interaction_dispatch.cpp  line.cpp  style.cpp  view_events.cpp  view_layout.cpp  view_lifecycle.cpp  view_render.cpp  view_update.cpp
lib/pixils/test/: CMakeLists.txt
lib/pixils/test/tests/: fixture.h  input_simulator.cpp  input_simulator.h  render_fixture.h
lib/pixils/test/tests/appfixture/: app_manifest.cpp  app_manifest.h  app_manifest_test.cpp  app_source_builder.cpp  app_source_builder.h  app_source_builder_test.cpp  composable_app_fixture.cpp  composable_app_fixture.h  composable_app_fixture_test.cpp  composable_app_session_fixture.cpp  composable_app_session_fixture.h  composable_app_session_fixture_test.cpp  minesweeper_app_manifest.cpp  minesweeper_app_manifest.h  minesweeper_app_manifest_test.cpp  runtime_move_characterization_test.cpp
lib/pixils/test/tests/appfixture/assets/: sample_mode_unit.lisple  sample_unit.lisple
lib/pixils/test/tests/appfixture/assets/apps/minesweeper/: implicit-fill-program.lisple  program.lisple
lib/pixils/test/tests/appfixture/assets/apps/minesweeper/components/: game-layout.lisple
lib/pixils/test/tests/appfixture/assets/apps/minesweeper/game-logic/: game-rules.lisple  new-game-state.lisple  status-panel-face-new-game-state.lisple
lib/pixils/test/tests/binding/: audio_test.cpp  border_test.cpp  color_test.cpp  defmode_test.cpp  image_test.cpp  point_test.cpp  render_test.cpp  state_counter_test.cpp  style_test.cpp
lib/pixils/test/tests/runtime/: composed_app_runtime_test.cpp  event_routing_test.cpp  frame_cycle_test.cpp  layout_test.cpp  session_children_test.cpp  session_fixture.h  session_hooks_test.cpp  state_binding_test.cpp
lib/pixils/test/tests/ui/: layout_test.cpp
scripts/: generate_assets.sh
(+71 files in other folders)
